# car_project

./: .gitignore  pyproject.toml
app/: settings.py  urls.py
cars/: admin.py  models.py  views.py
cars/migrations/: 0001_initial.py  0002_brand_alter_car_brand.py
cars/templates/: cars.html
