[tool.poetry]
name = "car-project"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[tool.taskipy.tasks]
run = { cmd = "python manage.py runserver", help = "Start run the project" }
makemigrations = { cmd = "python manage.py makemigrations", help = "Create a file of migrations" }
migrate = { cmd = "python manage.py migrate", help = "Send the migrations for the database" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
